--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,2 +1,8 @@
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<div class='messages'>
+	<% if notice %>
+		<p class="notice"><%= notice %></p>
+	<% end %>
+	<% if alert %>
+		<p class="alert"><%= alert %></p>
+	<% end %>	
+</div>
