--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,19 +1,19 @@
 body {
-	background-image: url("https://dl.dropboxusercontent.com/s/1qxxiy7zo716pdo/background.png");
-	background-position: center top;
-	background-color: black;
-	background-repeat: no-repeat;
-	background-size: cover;
+    background-image: url("https://dl.dropboxusercontent.com/s/1qxxiy7zo716pdo/background.png");
+    background-position: center top;
+    background-color: black;
+    background-repeat: no-repeat;
 }
 
-@media (max-width: 799px) {
-
+@media only screen and (min-width: 800px) {
     body {
-        background-image: url("https://dl.dropboxusercontent.com/s/1qxxiy7zo716pdo/background.png");
-        background-position: center top;
-        background-color: black;
-        background-repeat: no-repeat;
-        background-size: auto;
+    	background-size: cover !important;
+    }
+}
+
+@media only screen and (max-width: 799px) {
+    body {
+        background-size: auto !important;
     }
 }
 
