--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -5,17 +5,23 @@ body {
     background-repeat: no-repeat;
 }
 
-/*@media only screen and (min-width: 800px) {
+@media only screen and (min-width: 800px) {
     body {
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
     	background-size: cover !important;
     }
-}*/
+}
 
-/*@media only screen and (max-width: 799px) {*/
+@media only screen and (max-width: 799px) {
     body {
-        background-size: auto !important;
+        -webkit-background-size: auto 100%;
+        -moz-background-size: auto 100%;
+        -o-background-size: auto 100%;
+        background-size: auto 100%;
     }
-/*}*/
+}
 
 .subtitle {
 	color: rgba(255, 255, 255, 0.8) !important;
