--- a/app/views/guests/edit.html.erb
+++ b/app/views/guests/edit.html.erb
@@ -1,3 +1,6 @@
+<div id="bg">
+	<img src="https://dl.dropboxusercontent.com/s/1qxxiy7zo716pdo/background.png" alt="background">
+</div>
 <div id='container'>
 	<div class='form-container'>
 		<%= form_for @guest do |f| %>
