--- a/app/views/guests/show.html.erb
+++ b/app/views/guests/show.html.erb
@@ -1,6 +1,6 @@
-<div id="bg">
-	<img src="https://dl.dropboxusercontent.com/s/1qxxiy7zo716pdo/background.png" alt="background">
-</div>
+<!-- <div id="bg">
+	<img src="https://dl.dropboxusercontent.com/s/1qxxiy7zo716pdo/background.png">
+</div> -->
 
 <div id='container'>
 	<div class='form-container'>
