--- a/app/views/base_mailer/welcome_email.html.erb
+++ b/app/views/base_mailer/welcome_email.html.erb
@@ -4,6 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome! </h1>
+    <h1>Welcome!</h1>
+    <img src="https://dl.dropboxusercontent.com/s/fthfijuh3u1tfif/invite.png" alt="tada">
   </body>
 </html>
