--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,3 +1,7 @@
+html {
+    background-color: rgba(48, 48, 48, 1);
+}
+
 body {
     background: url("https://dl.dropboxusercontent.com/s/1qxxiy7zo716pdo/background.png") repeat-x top center fixed;
     -webkit-background-size: auto 100%;
@@ -5,7 +9,6 @@ body {
     -o-background-size: auto 100%;
     background-size: auto 100%;
     background-color: rgba(48, 48, 48, 1);
-    background-color: transparent;
 }
 
 .subtitle {
