--- a/app/views/guests/edit.html.erb
+++ b/app/views/guests/edit.html.erb
@@ -1,3 +1,7 @@
+<div id='bg_img'>
+	<img src="https://dl.dropboxusercontent.com/s/1qxxiy7zo716pdo/background_hq.png" alt="">
+</div>
+
 <div id='container'>
 	<div class='form-container'>
 		<%= form_for @guest do |f| %>
