--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,21 +1,23 @@
 html {
-    background: url("https://dl.dropboxusercontent.com/s/1qxxiy7zo716pdo/background.png") repeat-x top center fixed;
-    -webkit-background-size: auto 100%;
-    -moz-background-size: auto 100%;
-    -o-background-size: auto 100%;
-    background-size: auto 100%;
+    /*background: url("https://dl.dropboxusercontent.com/s/lmrdf0zuzji3ynq/cuadrobg.png") repeat;*/
+    /*background: url("https://dl.dropboxusercontent.com/s/1qxxiy7zo716pdo/background.png") repeat-x top center fixed;*/
+    /*-webkit-background-size: auto 100%;*/
+    /*-moz-background-size: auto 100%;*/
+    /*-o-background-size: auto 100%;*/
+    /*background-size: auto 100%;*/
     background-color: rgba(48, 48, 48, 1);
 }
 
-@media screen and (max-width: 1024px) {
-    html {
-        background: url("https://dl.dropboxusercontent.com/s/1qxxiy7zo716pdo/background_hd.png") repeat-x top center fixed;
-        -webkit-background-size: auto 100%;
-        -moz-background-size: auto 100%;
-        -o-background-size: auto 100%;
-        background-size: auto 100%;
-        background-color: rgba(48, 48, 48, 1);
-    }
+#bg_img {
+    position: fixed;
+    left: 50%;
+    transform: translate(-50%,0);
+    z-index: -1;
+    height: 100%;
+}
+
+#bg_img img {
+    height: 100%;
 }
 
 .subtitle {
@@ -52,20 +54,31 @@ html {
     position: absolute;
     left: 50%;
     top: 55%;
-    width: 400px;
-    margin-left: -200px;
+    width: 25%;
+    transform: translate(-50%,0);
     font-family: 'Euro';
     font-size: 2em;
     letter-spacing: 2px;
     z-index: 100;
 }
 
+#si-voy{
+    float:left;
+}
+
+#no-voy {
+    float:right;
+}
+
+
+
 @media screen and (max-width: 799px) {
 
     .form-container{
-        width: 280px;
-        margin-left: -140px;
+        width: 40%;
+        left: 50%;
         top: 50%;
+        transform: translate(-50%,0);
         font-size: 3em;
         text-align: center;
     }
@@ -73,6 +86,10 @@ html {
     .form-container span{
         float:left !important;
         margin-left: 0 !important;
+    }
+
+    #no-voy {
+        float:left;
     }
 }
 
@@ -127,5 +144,8 @@ html {
     margin: 8px auto !important;
     font-family: 'Euro';
     background-image: none !important;
-}
-/*"https://dl.dropboxusercontent.com/s/1qxxiy7zo716pdo/cuadrobg.png")*/
+} 
+/*https://dl.dropboxusercontent.com/s/4i75doaame7pkmj/background_hq.png*/
+/*https://dl.dropboxusercontent.com/s/1qxxiy7zo716pdo/background.png*/
+/*https://dl.dropboxusercontent.com/s/lmrdf0zuzji3ynq/cuadrobg.png*/
+/*https://dl.dropboxusercontent.com/s/fthfijuh3u1tfif/invite.png*/
