--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -75,7 +75,7 @@ html {
 @media screen and (max-width: 799px) {
 
     .form-container{
-        width: 40%;
+        width: 60%;
         left: 50%;
         top: 50%;
         transform: translate(-50%,0);
@@ -90,6 +90,18 @@ html {
 
     #no-voy {
         float:left;
+    }
+}
+
+@media screen and (max-width: 499px) {
+
+    .form-container{
+        width: 70%;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%,0);
+        font-size: 3em;
+        text-align: center;
     }
 }
 
