--- a/app/views/guests/edit.html.erb
+++ b/app/views/guests/edit.html.erb
@@ -11,11 +11,11 @@
 			</div>
 			<div>
 				<span style='float:left;margin-left:2em'>
-					<%= f.label :attending, "Si voy! :D", :value => "true"  %>
+					<%= f.label :attending, "Si voy!", :value => "true"  %>
 					<%= f.radio_button :attending, true %>
 				</span>
 				<span style='float:right;margin-right:2em;'>
-					<%= f.label :attending, "No voy! :(", :value => "false"  %>
+					<%= f.label :attending, "No voy.", :value => "false"  %>
 					<%= f.radio_button :attending, false %>
 				</span>
 			</div>
