--- a/app/views/guests/show.html.erb
+++ b/app/views/guests/show.html.erb
@@ -10,11 +10,11 @@
 			</div>
 			<div>
 				<span id="si-voy" >
-					<%= f.label :attending, "Si voy! :D", :value => "true"  %>
+					<%= f.label :attending, "Si voy!", :value => "true"  %>
 					<%= f.radio_button :attending, true, disabled: true %>
 				</span>
 				<span id="no-voy" >
-					<%= f.label :attending, "No voy! :(", :value => "false" %>
+					<%= f.label :attending, "No voy.", :value => "false" %>
 					<%= f.radio_button :attending, false, disabled: true %>
 				</span>
 			</div>
