si tienes 0 acompañantes el titulo no sale

--- a/app/views/guests/edit.html.erb
+++ b/app/views/guests/edit.html.erb
@@ -19,14 +19,17 @@
 					<%= f.radio_button :attending, false %>
 				</span>
 			</div>
-			<div class='subtitle'>
-				<p>Acompanante(s) :</p>
-			</div>
-			<%= f.fields_for :companions do |c| %>
-			<%= c.text_field :id, hidden: true %>
-				<%= c.text_field :full_name, placeholder: 'Nombre completo' %>
+			<% if @guest.companions.count > 0%>
+				<div class='subtitle'>
+					<p>Acompanante(s) :</p>
+				</div>
+				<%= f.fields_for :companions do |c| %>
+					<%= c.text_field :id, hidden: true %>
+					<div>
+						<%= c.text_field :full_name, placeholder: 'Nombre completo', disabled: true %>
+					</div>
+				<% end %>
 			<% end %>
-
 			<br>
 			<div>
 		  		<%= f.submit "Enviar" %>
