--- a/app/views/guests/edit.html.erb
+++ b/app/views/guests/edit.html.erb
@@ -29,6 +29,8 @@
 						<%= c.text_field :full_name, placeholder: 'Nombre completo', disabled: true %>
 					</div>
 				<% end %>
+			<%else%>
+				<br>
 			<% end %>
 			<br>
 			<div>
