--- a/app/views/guests/show.html.erb
+++ b/app/views/guests/show.html.erb
@@ -28,6 +28,8 @@
 						<%= c.text_field :full_name, placeholder: 'Nombre completo', disabled: true %>
 					</div>
 				<% end %>
+			<%else%>
+				<br>
 			<% end %>
 		<% end %>
 		<div style='padding-top:1em;text-align:center;'>
