--- a/app/views/base_mailer/invite.html.erb
+++ b/app/views/base_mailer/invite.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h2>Y estas invitado!</h2>
+    <h2>Y estas invitad@!</h2>
     <p>Nos encantaria celebrar contigo este momento especial para nosotros. Los detalles se encuentra en la imagen adjunta, y no olvides confirmar tu asistencia usa </p>
     <div>
     	<%= link_to('Confirma tu asistencia!', guest_url(@guest)) %>
