--- a/app/views/base_mailer/invite.html.erb
+++ b/app/views/base_mailer/invite.html.erb
@@ -5,10 +5,7 @@
   </head>
   <body>
     <h2>Y estas invitad@!</h2>
-    <p>Nos encantaria celebrar contigo este momento especial para nosotros. Los detalles se encuentra en la imagen adjunta, y no olvides confirmar tu asistencia usa </p>
-    <div>
-    	<%= link_to('Confirma tu asistencia!', guest_url(@guest)) %>
-    </div>
+    <p>Nos encantaria celebrar contigo este momento especial para nosotros. Los detalles se encuentra en la imagen adjunta, y no olvides confirmar tu asistencia usando  <%= link_to('este link', guest_url(@guest)) %>.</p>
     <div style="text-align:center;">
     	<img src="https://dl.dropboxusercontent.com/s/fthfijuh3u1tfif/invite.png" alt="tada">
     </div>
