--- a/app/views/guests/edit.html.erb
+++ b/app/views/guests/edit.html.erb
@@ -19,7 +19,7 @@
 					<%= f.radio_button :attending, false %>
 				</span>
 			</div>
-			<% if @guest.companions.count > 0%>
+			<% if @guest.plus > 0 %>
 				<div class='subtitle'>
 					<p>Acompanante(s) :</p>
 				</div>
