--- a/app/views/guests/edit.html.erb
+++ b/app/views/guests/edit.html.erb
@@ -24,12 +24,10 @@
 					<p>Acompanante(s) :</p>
 				</div>
 				<%= f.fields_for :companions do |c| %>
-					<% @guest.plus.times do %>
 						<%= c.text_field :id, hidden: true %>
 						<div>
-							<%= c.text_field :full_name, placeholder: 'Nombre completo', disabled: true %>
+							<%= c.text_field :full_name, placeholder: 'Nombre completo' %>
 						</div>
-					<% end %>
 				<% end %>
 			<%else%>
 				<br>
