--- a/app/views/guests/edit.html.erb
+++ b/app/views/guests/edit.html.erb
@@ -1,5 +1,5 @@
 <div id='bg_img'>
-	<img src="https://dl.dropboxusercontent.com/s/1qxxiy7zo716pdo/background_hq.png" alt="">
+	<img src=<%= @guest.background %> alt="">
 </div>
 
 <div id='container'>
