--- a/app/views/base_mailer/invite.html.erb
+++ b/app/views/base_mailer/invite.html.erb
@@ -7,7 +7,7 @@
     <h2>Y estas invitad@!</h2>
     <p>Nos encantaria celebrar contigo este momento especial para nosotros. Los detalles se encuentra en la imagen adjunta, y no olvides confirmar tu asistencia usando  <%= link_to('este link', guest_url(@guest)) %>.</p>
     <div style="text-align:center;">
-    	<img src="https://dl.dropboxusercontent.com/s/fthfijuh3u1tfif/invite.png" alt="tada">
+    	<img src=<%= @guest.invite %> alt="tada">
     </div>
   </body>
 </html>
