--- a/app/views/base_mailer/invite.html.erb
+++ b/app/views/base_mailer/invite.html.erb
@@ -4,10 +4,15 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
+    <p>(English bellow)</p>
     <h2>Y estas invitad@!</h2>
     <p>Nos encantaria celebrar contigo este momento especial para nosotros. Los detalles se encuentra en la imagen adjunta, y no olvides confirmar tu asistencia usando  <%= link_to('este link', guest_url(@guest)) %>.</p>
+    <br>
+    <h2>And you're invited!</h2>
+    <p>We're love to celebrate this very special ocasion with you. You can find the details in the attached image. Please dont foget to confirm you attendance using <%= link_to('this link', guest_url(@guest)) %>.</p>
     <div style="text-align:center;">
     	<img src=<%= @guest.invite %> alt="tada">
     </div>
+    <p>04/08/17 7:00pm @ Sereno Moreno, Monterrey 335, Roma Sur, 06760 Ciudad de México, CDMX, Mexico.</p>
   </body>
 </html>
